web: use rem in newly added RepoNav styling

--- a/web/src/repo/_RepoNav.scss
+++ b/web/src/repo/_RepoNav.scss
@@ -43,10 +43,10 @@
         }
     }
     &__rev {
-        border: 1px solid #93A9C8;
-        line-height: 24px;
-        padding-left: 8px;
-        border-radius: 2px;
+        border: 0.0625rem solid #93A9C8;
+        line-height: 1.5rem;
+        padding-left: .5rem;
+        border-radius: .125rem;
         user-select: none;
     }
 
