--- a/web/src/repo/_RevSwitcher.scss
+++ b/web/src/repo/_RevSwitcher.scss
@@ -36,10 +36,7 @@
         width: 100%;
         height: 2.5rem;
         cursor: pointer;
-        padding-left: .5rem;
-        padding-right: .5rem;
-        padding-top: .25rem;
-        padding-bottom: .25rem;
+        padding: .25rem .5rem;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
