Fix SearchBox width

--- a/web/src/nav/_Navbar.scss
+++ b/web/src/nav/_Navbar.scss
@@ -36,7 +36,7 @@
     }
 
     &__search-box-container {
-        max-width: 52rem;
+        width: 52rem;
         min-width: 0;
         align-self: flex-start;
     }
