--- a/web/src/search/_SearchBox.scss
+++ b/web/src/search/_SearchBox.scss
@@ -107,9 +107,8 @@
         padding: 0.25rem 0.5rem;
         color: white;
         vertical-align: top;
-        width: 49%;
+        width: 15rem;
         max-width: fit-content;
-        min-width: 10rem;
         white-space: nowrap;
         &-text {
             flex: 0 1 auto;
