--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -101,7 +101,15 @@ body {
     width: 100%;
 }
 
+// Selection highlight is the background color for matched/highlighted tokens,
+// e.g. for search results, for identifying the token currently being hovered over,
+// or identifying the token the references panel is toggled for
 .selection-highlight {
+    background-color: rgba(217, 72, 15, 0.5);
+}
+// Same as above, but indicates highlighting for a fixed tooltip (vs. e.g.
+// an ephemeral mouseover on some token).
+.selection-highlight-sticky {
     background-color: rgba(217, 72, 15, 0.5);
 }
 
