--- a/web/src/references/_ReferencesWidget.scss
+++ b/web/src/references/_ReferencesWidget.scss
@@ -30,12 +30,12 @@
 
     &__uri-path-part {
         padding-left: 0.5rem;
-        padding-right: 0.5rem;
     }
 
     &__file-path-part {
         color: white;
         font-weight: bold;
+        padding-left: 0.5rem;
         padding-right: 15px;
     }
 
