web: update Search page route handling

--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -13,7 +13,7 @@ $media-lg: 992px;
 $media-xl: 1200px;
 
 @import './highlight';
-@import './home/Home';
+@import './search/Search';
 @import './nav/Navbar';
 @import './search/SearchBox';
 @import './search/SearchResults';
